2017-04-03 Peter Onyisi <ponyisi@cern.ch>
	* Add innerPix variable for leptons (though value is limited as long as we
	  have BL hit requirement for electrons)
	* Add min OS Mll variables for 4l

2017-02-23 Robert Wolff <robert.wolff@cern.ch>
	* add preliminary ttbar-ttbar+gamma OLR ATLASTTHML-86
	* add Dilepton Filter Classification (for dilep filtered ttbar)
	* add HF Classification from Top (0=light, 4=c, 5=b)

2017-02-21 Robert Wolff <robert.wolff@cern.ch>
	* Add mc_isAFII (for fast simulation samples true)
	* add latest TDP to setupRC script
	* add possibility to run submission script from everywhere
	* add automatic priority 1 samples from x-section files for Sys jobs
	* move (other) signal samples from bkg x-sec file to sig x-sec file
	* fix correct diboson samples in MC_PostICHEP.py
	* remove m_truth_jets for Sys ntuples
	* remove V+jets Sherpa CT10 samples from MC_PostICHEP.py
	* add tagged version ttHMultiAna-02-04-27

2017-02-20 Harish Potti <harish.potti@cern.ch>
	* Add Xsec for Sherpa 2.2.1 Diboson and low mass Z+Jets

2017-02-20 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Implement TrigGlobalEfficiencyCorrectionTool for 2LSS, 3L and 4L (SLT||DLT), nominal only
	* Clean-up Decoration of old PromptLeptonIso

2017-02-17 Robert Wolff <robert.wolff@cern.ch>
	* remove AntiKt4PV0TrackJets
	* add new ilumicalc and GRL for 2016 data
	* add DLT matching for lepton pairs with pt threshold for mumu trigger
	* add transverse mass Met+remainging lep for 3l with Z candidates
	* fix protection for sherpa21 shower samples for running on grid
	* add new diboson cross-sections and k-factors in TopDataPreparation

2017-02-15 Robert Wolff <robert.wolff@cern.ch>
	* update to AnalysisTop 2.4.27
	* add 60% and 85% b-tagging WP to 2015 data config
	* update submission script for Sys splitting

2017-02-13 Harish Potti <harish.potti@utexas.edu>
	* add addXsec.py
	* add README in util/
	* update Xsections

2017-02-02 Robert Wolff <robert.wolff@cern.ch>